# charon

./: Dockerfile  README.md  charon.py  charon.yml  docker-compose.yml  pipeline.yml  pyproject.toml  requirements.txt  styx.py
charon/: __main__.py  requirements.txt  restic.py  scheduling.py  shared.py  styx.py
charon/sources/: http.py  local.py  sqlite.py
destinations/: gcp_bucket.py
dev/tests/: test5.sh
sources/: __init__.py  charon_http.py
src/: charon.py  shared.py  styx.py
tests/: charon.test.yml  test.sh  test2.sh  test4.sh
