[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "charon"
authors = [{name = "Noah Burghardt"}]
classifiers = ["License :: OSI Approved :: MIT License"]
description = "charon is a utility for backing up data from one location to another at regular intervals."
version = "0.0.0"

[project.urls]
Home = "https://gitlab.com/haondt/charon"
