[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "haondt_charon"
authors = [{name = "haondt"}]
classifiers = ["License :: OSI Approved :: MIT License"]
description = "charon is a utility for backing up data from one location to another at regular intervals."
version = "0.0.0"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["backup", "recovery"]
dependencies = [
    "croniter>=2.0.5",
    "PyYAML>=6.0.1"
]

[project.scripts]
charon = "charon.__main__:main"

[project.urls]
Homepage = "https://gitlab.com/haondt/charon"
Repository = "https://gitlab.com/haondt/charon"

[tool.flit.module]
name = "charon"
